Execução do teste

--- a/ProductsAPI_Tabnine/ProductsAPI_Tabnine.csproj
+++ b/ProductsAPI_Tabnine/ProductsAPI_Tabnine.csproj
@@ -7,23 +7,47 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <Compile Remove="Application\DTOs\**" />
+    <Compile Remove="Domain\Constants\**" />
+    <Compile Remove="Domain\Exceptions\**" />
+    <Compile Remove="Domain\Models\**" />
+    <Content Remove="Application\DTOs\**" />
+    <Content Remove="Domain\Constants\**" />
+    <Content Remove="Domain\Exceptions\**" />
+    <Content Remove="Domain\Models\**" />
+    <EmbeddedResource Remove="Application\DTOs\**" />
+    <EmbeddedResource Remove="Domain\Constants\**" />
+    <EmbeddedResource Remove="Domain\Exceptions\**" />
+    <EmbeddedResource Remove="Domain\Models\**" />
+    <None Remove="Application\DTOs\**" />
+    <None Remove="Domain\Constants\**" />
+    <None Remove="Domain\Exceptions\**" />
+    <None Remove="Domain\Models\**" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="API\Controllers\" />
     <Folder Include="API\" />
-    <Folder Include="Application\DTOs\" />
     <Folder Include="Application\Interfaces\" />
     <Folder Include="Application\Services\" />
-    <Folder Include="Domain\Constants\" />
     <Folder Include="Domain\Entities\" />
     <Folder Include="Domain\Enums\" />
-    <Folder Include="Domain\Exceptions\" />
     <Folder Include="Domain\Interfaces\" />
-    <Folder Include="Domain\Models\" />
     <Folder Include="Infra\DataContext\" />
     <Folder Include="Infra\Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
 
 </Project>
