--- a/ProductsAPI_Tabnine/appsettings.Development.json
+++ b/ProductsAPI_Tabnine/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
+  "ConnectionStrings": {
+    "ProductConnection": "Server=localhost;Database=Products_Tabnine;User Id=sa;Password=123456;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Products_Tabnine;User Id=sa;Password=123456;TrustServerCertificate=True;"
   }
 }
